add fetch and switch for selecting movie

--- a/seats.html
+++ b/seats.html
@@ -11,10 +11,11 @@
     <div class="move-container">
       <label>Selecteaza filmul:</label>
       <select id="movie">
-        <option value="16">Super Mario Bros: Filmul (16 RON)</option>
-        <option value="20">John Wick 4 (20 RON)</option>
-        <option value="18">Gardienii Galaxiei vol. 4 (18 RON)</option>
+        <option value="1">Super Mario Bros: Filmul (16 RON)</option>
+        <option value="2">John Wick 4 (20 RON)</option>
+        <option value="3">Gardienii Galaxiei vol. 3 (18 RON)</option>
       </select>
+      <!-- <button onclick="{handleMovieSelection}" class="buy">Vizualizeaza</button> -->
     </div>
 
     <ul class="showcase">
@@ -37,7 +38,7 @@
       <div id="seating-area"></div>
     </div>
 
-    <p class="text">Ai selectat <span id="count">0</span> locuri in valoare de <span id="total">0 </span> RON.</p>
+    <p class="text">Ai selectat <span id="count">0</span> locuri in valoare de <span id="total">0 </span> RON. <button class="buy">CUMPARA</button></p>
 
     <script src="script.js"></script>
   </body>
